기존 TodoListInMemory페이지를 추가하고 네비게이션에서 sample 메뉴를 만들어서 해당 메뉴에서 link가 걸리도록 함.

--- a/HyeongGyu_Project/HyeongGyu_Project.csproj
+++ b/HyeongGyu_Project/HyeongGyu_Project.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.14" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HyeongGyu_Project.Models\HyeongGyu_Project.Models.csproj" />
+  </ItemGroup>
+
 </Project>
