--- a/HyeongGyu_Project.Admin/HyeongGyu_Project.Admin.csproj
+++ b/HyeongGyu_Project.Admin/HyeongGyu_Project.Admin.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -22,6 +22,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.14" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HyeongGyu_Project.Models\HyeongGyu_Project.Models.csproj" />
   </ItemGroup>
 
 </Project>
